--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,11 @@
 			<artifactId>spark-mllib_2.11</artifactId>
 			<version>2.0.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.3.0</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
