--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,11 @@
 			<artifactId>jlibsvm</artifactId>
 			<version>0.911</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.1</version> <!-- makesure correct version here -->
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -217,7 +222,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<webXml>src\main\monitor\WEB-INF\web.xml</webXml>
+					<webXml>src\main\lotto\WEB-INF\web.xml</webXml>
 				</configuration>
 			</plugin>
 			<plugin>
